--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-langchain>=0.1.16
-langchain-community>=0.0.33
-langchain-huggingface
+langchain>=0.3.0
+langchain-community>=0.3.0
+langchain-huggingface>=0.1.0
+langchain-text-splitters>=0.3.0
+langchain-chroma>=0.1.0
 PyPDF2==3.0.1
 python-dotenv==1.0.0
 streamlit>=1.18.1
 altair>=4
 chromadb>=0.4.24
-langchain-groq>=0.1.3
+langchain-groq>=0.2.0
 sentence-transformers>=2.5.1
 pysqlite3-binary
