--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-langchain>=0.3.0
-langchain-community>=0.3.0
-langchain-core>=0.3.0
-langchain-huggingface>=0.1.0
-langchain-text-splitters>=0.3.0
-langchain-chroma>=0.1.0
+langchain==0.3.13
+langchain-community==0.3.13
+langchain-core==0.3.28
+langchain-huggingface==0.1.2
+langchain-text-splitters==0.3.5
+langchain-chroma==0.1.4
 PyPDF2==3.0.1
 python-dotenv==1.0.0
 streamlit>=1.18.1
